# Flask

./: .gitignore  LICENSE  Readme.md  build.sh  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt  secrets.txt  wsgi.py
blog/: app.py  commands.py  config.py  db.sqlite  extension.py  models.py
blog/api/: article.py  author.py  tag.py  user.py  views.py
blog/article/: views.py
blog/auth/: view.py
blog/forms/: user.py
blog/index/: views.py
blog/report/: views.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: details.html  list.html
blog/templates/auth/: login.html
blog/templates/users/: details.html  list.html
blog/user/: views.py
migrations/versions/: 023e7e0d99e7_.py  09865da21a4c_add_new_field_to_user_table.py  19f11a964899_.py  3d2b03394ff3_.py  b8302b1dd428_.py  f1b590599a2d_.py
