[tool.poetry]
name = "flask_prjct"
version = "0.1.0"
description = ""
authors = ["StanleyIG"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.2"
python-dotenv = "^1.0.0"
flask_login = "0.6.2"
flask_sqlalchemy = "3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
