[tool.poetry]
name = "flask_prjct"
version = "0.1.0"
description = ""
authors = ["StanleyIG"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.2"
python-dotenv = "^1.0.0"
flask_login = "0.6.2"
flask_sqlalchemy = "3.0.2"
psycopg2-binary = "^2.9.6"
Flask-Migrate = "^4.0.4"
WTForms = "^3.0.1"
email-validator = "^2.0.0"
flask-wtf = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
